Adds mysql requirement for binder

--- a/Diatomic Workspace.ipynb
+++ b/Diatomic Workspace.ipynb
@@ -72,7 +72,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a32be225b9824b5b87ff2710969087ce",
+       "model_id": "c3d85543df5c41c79265470ea694028e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -86,7 +86,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff8dd31e4b014f0590d9a6c7aea40f61",
+       "model_id": "e1733b0e175944da80edc1fc599b7bb3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -134,10 +134,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dc = getDiatomicConstants(\"7664-39-3\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'FH', 'state': 'ground', 'T': 0.0, 'w': 4138.32, 'wx': 89.88, 'wy': 0, 'wz': 0, 'B': 20.9557, 'a': 0.798, 'y': 0, 'D': 0.002151, 're': 0.9168, 'u': 0.9570552776470107}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Special cases list HF, HCL\n",
+    "#Add in database\n",
+    "#Auto cut off\n",
+    "print(dc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'TEST'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"test\".upper()"
+   ]
   },
   {
    "cell_type": "code",
