--- a/Diatomic Workspace.ipynb
+++ b/Diatomic Workspace.ipynb
@@ -35,7 +35,9 @@
     "from rkr import *\n",
     "from morsePotential import *\n",
     "from operators import *\n",
-    "from schrodinger import *"
+    "from schrodinger import *\n",
+    "import dill\n",
+    "import os"
    ]
   },
   {
@@ -72,7 +74,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3d85543df5c41c79265470ea694028e",
+       "model_id": "3626f66f886444ea8a8654fdc8d56c7b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -86,7 +88,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e1733b0e175944da80edc1fc599b7bb3",
+       "model_id": "ee3eaf4baf8f463385db73e4a2722f35",
        "version_major": 2,
        "version_minor": 0
       },
@@ -100,30 +102,62 @@
    ],
    "source": [
     "#main logic \n",
+    "storagePath = \"./dataStorage/\" if \"win\" in sys.platform else \".\\\\dataStorage\\\\\"\n",
+    "\n",
+    "def buildSchrodSolution(schrodFileName):\n",
+    "    dc = getDiatomicConstants(diatomicName.value)\n",
+    "\n",
+    "    #check if diatomic provided can be found\n",
+    "    if(dc == False):\n",
+    "        info.value = \"Could not find requested diatomic, please try again.\"\n",
+    "        return False\n",
+    "\n",
+    "    info.value = '<p style=\"font-family:verdana;font-size:15px\">Calculating.....</p>'\n",
+    "\n",
+    "    basis = basisSet(dc, basisFunctionClass = how, size = basisSize.value)\n",
+    "    fitting = morsePotential(dc, rkr(dc).compute())\n",
+    "    schrodSolution = schrod(HOperator(TOperator(basis), VOperator(basis, fitting)), basis, fitting)\n",
+    "\n",
+    "    with open(schrodFileName, \"wb\") as schrodBin:\n",
+    "        dill.dump(schrodSolution, schrodBin)     \n",
+    "        \n",
+    "        \n",
+    "    return schrodSolution\n",
+    "\n",
     "def compute(value):\n",
-    "    print(\"VALEU: \", value)\n",
-    "    print()\n",
+    "    \n",
     "    startButton.value = False\n",
     "    if(not value[\"new\"]):\n",
     "        return \n",
-    "    info.value = '<p style=\"font-family:verdana;font-size:15px\">Calculating.....</p>'\n",
-    "\n",
-    "    dc = getDiatomicConstants(diatomicName.value)\n",
     "    \n",
-    "    #check if diatomic provided can be found\n",
-    "    if(dc == False):\n",
-    "        print(\"Please enter another diatomic.\")\n",
+    "    schrodFileName = storagePath + diatomicName.value + \"Mass\" + \"We\"\n",
+    "        \n",
+    "    #check if data storage already has the wavefunctions calculated\n",
+    "    if(os.path.exists(schrodFileName)):\n",
+    "        with open(schrodFileName, 'rb') as schrodBin:\n",
+    "            schrodSolution = dill.load(schrodBin)    \n",
+    "            \n",
+    "            #if the user is running a larger basis set then allow the user to run their calculation\n",
+    "            if(schrodSolution.basis.size < basisSize.value):\n",
+    "                endCalcMessage = '<p style=\"font-family:verdana;font-size:15px\">Calculation Completed</p>'\n",
+    "                schrodSolution = buildSchrodSolution()\n",
+    "                \n",
+    "            else: \n",
+    "                endCalcMessage = '<p style=\"font-family:verdana;font-size:15px\">Found Saved Diatomic Schrodinger Solution with basis size of ' + str(schrodSolution.basis.size) + '.</p>'\n",
+    "    else: \n",
+    "        endCalcMessage = '<p style=\"font-family:verdana;font-size:15px\">Calculation Completed</p>'\n",
+    "        schrodSolution = buildSchrodSolution(schrodFileName)\n",
+    "        \n",
+    "    if(schrodSolution == False):\n",
     "        return\n",
+    "        \n",
+    "    info.value = endCalcMessage\n",
     "\n",
-    "    basis =  basisSet(dc, basisFunctionClass = how, size = basisSize.value)\n",
-    "    fitting = morsePotential(dc, rkr(dc).compute())\n",
-    "    with out: \n",
-    "        graph = schrod(HOperator(TOperator(basis), VOperator(basis, fitting)), basis, fitting).graph(getGraph = True)\n",
+    "    with out:\n",
+    "        graph = schrodSolution.graph(getGraph = True)\n",
     "        out.clear_output()\n",
     "        display(graph)   \n",
     "    \n",
-    "    info.value = '<p style=\"font-family:verdana;font-size:15px\">Calculation Completed</p>'\n",
-    "\n",
     "startButton.observe(compute, names=\"value\")\n",
     "\n",
     "display(widgets.VBox([\n",
@@ -138,56 +172,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dc = getDiatomicConstants(\"7664-39-3\")\n",
-    "\n"
+    "#add dropdowns for mass and we"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'name': 'FH', 'state': 'ground', 'T': 0.0, 'w': 4138.32, 'wx': 89.88, 'wy': 0, 'wz': 0, 'B': 20.9557, 'a': 0.798, 'y': 0, 'D': 0.002151, 're': 0.9168, 'u': 0.9570552776470107}\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Special cases list HF, HCL\n",
-    "#Add in database\n",
-    "#Auto cut off\n",
-    "print(dc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'TEST'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"test\".upper()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
