--- a/Comp Chem Package Example.ipynb
+++ b/Comp Chem Package Example.ipynb
@@ -65,9 +65,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'CO', 'state': 'ground', 'T': 0.0, 'w': 2169.81358, 'wx': 13.28831, 'wy': 0, 'wz': 0, 'B': 1.93128087, 'a': 0.01750441, 'y': 0, 'D': 6.12147e-06, 're': 1.128323, 'u': 6.8562086380025615}\n",
+      "{'name': 'O2', 'state': 'ground', 'T': 0.0, 'w': 1580.19, 'wx': 11.98, 'wy': 0.0474, 'wz': 0, 'B': 1.4376766, 'a': 0.0159, 'y': 0, 'D': 4.839e-06, 're': 1.20752, 'u': 7.997457309785}\n",
       "\n",
-      "13.28831\n"
+      "11.98\n"
      ]
     }
    ],
@@ -76,7 +76,7 @@
     "from nistScraper import getDiatomicConstants\n",
     "\n",
     "#Simply enter the name of the diatomic molecule as a string\n",
-    "dc = getDiatomicConstants(\"CO\")\n",
+    "dc = getDiatomicConstants(\"O2\")\n",
     "\n",
     "#This will display the layout of information in the diatomic constants object \n",
     "print(dc)\n",
@@ -95,16 +95,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "basisFunction.value(r):  -1.0934777638222464\n",
+      "basisFunction.value(r):  2.3059567647029686\n",
       "\n",
-      "basisFunction.squaredValue(r):  1.1956936199737005\n",
+      "basisFunction.squaredValue(r):  5.3174366006793825\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "15506b2a87374511ab6168274285e166",
+       "model_id": "9a98865212484bcc984fac8711902cc9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -150,11 +150,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "basis.value(n, r):  0.8708245670604646\n",
+      "basis.value(n, r):  0.02284218623844181\n",
       "\n",
-      "Basis Function n=0 .value(r):  0.09100802389550973\n",
-      "Basis Function n=1 .value(r):  -0.3469319042644413\n",
-      "Basis Function n=2 .value(r):  0.8708245670604646\n",
+      "Basis Function n=0 .value(r):  0.0010325775457355882\n",
+      "Basis Function n=1 .value(r):  -0.005867053961588992\n",
+      "Basis Function n=2 .value(r):  0.02284218623844181\n",
       "\n",
       "First Basis Function:\n"
      ]
@@ -162,7 +162,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0f513b7efb6d48eb85573c0a35085c65",
+       "model_id": "de499c0902394380bbe3e2a30c7640c8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -185,7 +185,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e4be2e67ecb94cd6b8a5a794ca9ecd23",
+       "model_id": "9920b879fe944dfca5419ede89324bd2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -250,18 +250,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f9a68a08e47c4ae6b8267060db06ab1a",
+       "model_id": "e6cdba0ba4df4643a2cc0ebf049ab69e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(Label(value='Computing RKR Surface'), FloatProgress(value=-2169.78700338, max=0.0, min=-2169.78…"
+       "HBox(children=(Label(value='Computing RKR Surface'), FloatProgress(value=-1580.1660401422, max=0.0, min=-1580.…"
       ]
      },
      "metadata": {},
@@ -271,13 +271,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Point from the PES in the form of (r, E): (0.13237682794110092, 2.169800291690002).\n"
+      "Point from the PES in the form of (r, E): (1.2131726125066273, 1.5801780200474016).\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa722510239440088ca62245b180ebee",
+       "model_id": "e82642b3246544ffa6f01e26aa0b625d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -325,13 +325,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fitting.value(r):  86562.33682426663\n"
+      "fitting.value(r):  69720.99581615179\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4bab53a6bae147e0ac562e010795e270",
+       "model_id": "ca969c3362804c77ad963b6b94a3c699",
        "version_major": 2,
        "version_minor": 0
       },
@@ -387,9 +387,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T[1,1]:  1612.5523403837517\n",
-      "V[0,1]:  -132.27867559605755\n",
-      "H[1,1]: -375.8114562082976\n"
+      "T[1,1]:  1175.9829190998144\n",
+      "V[0,1]:  -184.83382075950172\n",
+      "H[1,1]: -424.46020352580047\n"
      ]
     }
    ],
@@ -438,7 +438,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "71887b1d9c4948948c78625d880f9d22",
+       "model_id": "2701c0644a3f435b8664d21f36cfd374",
        "version_major": 2,
        "version_minor": 0
       },
@@ -454,7 +454,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7fde6c4b1fcb402d8e6380876a2a9813",
+       "model_id": "0ec81e89da8741afae59ebe2c87b4c1a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -471,14 +471,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wavefunction.value(r):  1080.5165887963026\n",
+      "wavefunction.value(r):  775.640326172319\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e819cf54f2da409b86f3909137a500af",
+       "model_id": "c67d9dab3f444c12b44b30f066afb7a3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -530,91 +530,6 @@
     "#Wavefunctions are graphable objects \n",
     "wavefunctions[2].graph()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 9.98194251e-01,  6.00604166e-02, -9.91835037e-04],\n",
-       "       [ 5.90753316e-02, -9.84544920e-01, -1.64867842e-01],\n",
-       "       [ 1.08785374e-02, -1.64511539e-01,  9.86315168e-01]])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "solution2.eigenVectors"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import dill\n",
-    "out = open(\"./test2.txt\", 'w+b')\n",
-    "dill.pickle(solutionWithPES2, out)\n",
-    "out.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "EOFError",
-     "evalue": "Ran out of input",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mEOFError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-2ffeea898f64>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mdill\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mout\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"./test2.txt\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'rb'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mt\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdill\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mout\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mout\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32ma:\\apps\\python\\lib\\site-packages\\dill\\_dill.py\u001b[0m in \u001b[0;36mload\u001b[1;34m(file, ignore, **kwds)\u001b[0m\n\u001b[0;32m    276\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mignore\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    277\u001b[0m     \u001b[1;34m\"\"\"unpickle an object from a file\"\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 278\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0mUnpickler\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mignore\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mignore\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    279\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    280\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mloads\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mignore\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32ma:\\apps\\python\\lib\\site-packages\\dill\\_dill.py\u001b[0m in \u001b[0;36mload\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    479\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    480\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;31m#NOTE: if settings change, need to update attributes\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 481\u001b[1;33m         \u001b[0mobj\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mStockUnpickler\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    482\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__module__\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_main_module\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'__name__'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'__main__'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    483\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_ignore\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mEOFError\u001b[0m: Ran out of input"
-     ]
-    }
-   ],
-   "source": [
-    "import dill\n",
-    "out = open(\"./test2.txt\", 'rb')\n",
-    "t = dill.load(out)\n",
-    "out.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t.graph()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "solutionWithPES2.graph()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
