Adds support for Schordiner Solution maxWaveFunctions variable

--- a/Diatomic Workspace.ipynb
+++ b/Diatomic Workspace.ipynb
@@ -95,7 +95,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e1e34f89f8e74bf18d96604c72f72388",
+       "model_id": "b89fd1c17c564395ac5316a6af3b20f0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -109,7 +109,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "daddb21cde474db0a494251b04b70b1a",
+       "model_id": "d30351fa425d4e149da123bf21a5a838",
        "version_major": 2,
        "version_minor": 0
       },
@@ -166,7 +166,7 @@
     "            schrodSolution = dill.load(schrodBin)    \n",
     "            \n",
     "            #if the user is running a larger basis set then allow the user to run their calculation\n",
-    "            if(schrodSolution.basis.size < basisSize.value):\n",
+    "            if(schrodSolution.maxWaveFunctions < basisSize.value):\n",
     "                endCalcMessage = '<p style=\"font-family:verdana;font-size:15px\">Calculation Completed</p>'\n",
     "                schrodSolution = buildSchrodSolution(schrodFileName)\n",
     "                \n",
