Fixes Windows VS Unix Path Typo

--- a/Diatomic Workspace.ipynb
+++ b/Diatomic Workspace.ipynb
@@ -95,7 +95,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b89fd1c17c564395ac5316a6af3b20f0",
+       "model_id": "5fa1598eb6ca47fb813cd323b22596f7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -109,7 +109,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d30351fa425d4e149da123bf21a5a838",
+       "model_id": "8fc187a882784e2f959648aa99c5929a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -123,7 +123,7 @@
    ],
    "source": [
     "#main logic \n",
-    "storagePath = \"./dataStorage/\" if \"win\" in sys.platform else \".\\\\dataStorage\\\\\"\n",
+    "storagePath = \".\\\\dataStorage\\\\\" if \"win\" in sys.platform else \"./dataStorage/\"\n",
     "\n",
     "def buildSchrodSolution(schrodFileName):\n",
     "    dc = getDiatomicConstants(diatomicName.value)\n",
